# mmpy

./: .gitignore  LICENSE  PackagingDocumentation.txt  README.md  badparse.mm  database.py  p2.mm  parse.py  proof.py  pyproject.toml  substitute.pyx  tests.py  theory.py  todo.txt  training_data.py  unifor_shortened.txt
src/: proof.py
src/metamathpy/: backsearch.py  cterms.py  database.py  environment.py  gen_helpers.py  npterms.py  parsing.py  piletrie.py  prefix.py  proof.py  setmm.py  solitaire.py  substitution.py  term_trie.py  terms.py  unification.py  unirule.py
src/mmmine/: bidao.py  dags.py  dependencies.py  eliminate_defs.py  expansion.py  hypdist.py  ida.py  loglogess.py  prelim_checks.py  raw.py  raw_heuristic.py  rule_stats.py  scratch.py  spouts.py  threshfun.py  unifor.py  unifore.py  uniforl.py  unifort.py  used.py  wff_repeats.py
src/ui/: mp2.py  scratch.py  search.py  todo.txt
tests/: test.mm  tests.py
