[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metamath-py"
version = "0.0.6"
authors = [
  { name="Garrett E. Katz", email="garrett.katz@gmail.com" },
]
description = "A Python interface to Metamath"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/garrettkatz/mmpy"
"Bug Tracker" = "https://github.com/garrettkatz/mmpy/issues"

