[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metamath-py"
license = "MIT"
license-files = ["LICENSE"]
version = "0.0.9"
authors = [
  { name="Garrett E. Katz"},
  { name="Chad T. Smith" },
  { email="garrett.katz@gmail.com" },
]
description = "A Python interface to Metamath"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/garrettkatz/mmpy"
"Bug Tracker" = "https://github.com/garrettkatz/mmpy/issues"

